fixed bug: query numerico

--- a/sass/partials/main.scss
+++ b/sass/partials/main.scss
@@ -1019,7 +1019,7 @@ html, body {
     }
     &__imagen {
         width:25%;
-        height:25%;
+        height:50px;
         object-fit: cover;
     }
     &__fecha {
