--- a/partials/slideshow.css
+++ b/partials/slideshow.css
@@ -69,7 +69,7 @@ a.control_next {
 .slider__imagen {
   width: 100%;
   height: 100%;
-  object-fit: cover;
+  object-fit: contain;
 }
 
 /*# sourceMappingURL=slideshow.css.map */
