--- a/sass/partials/_main.scss
+++ b/sass/partials/_main.scss
@@ -8,19 +8,7 @@ body {
     color:$negro-oscuro;
 }
 
-html, body {
-    width: 100%;
-    height: 100%;
-    display:flex;
-    flex-direction: column;
-}
 
-.contenido-main {
-    flex-grow:1;
-    display: flex;
-    flex-direction: column;
-    align-items: space-between;
-}
 
 .container {
     // Espacio de dos lados del contenedor
@@ -897,6 +885,7 @@ html, body {
 .footer {
     background: $negro-oscuro;
     &__container {
+        position:relative;
         display:flex;
         flex-direction: column;
     }
