--- a/style.css
+++ b/style.css
@@ -1449,6 +1449,8 @@ body {
 
   .buscador-aside {
     position: sticky;
+    position: -webkit-sticky;
+    /* Safari */
     top: 135px;
     left: 0;
     margin-top: 0;
@@ -1757,6 +1759,8 @@ body {
   .buscador-aside {
     font-size: 1em;
     position: sticky;
+    position: -webkit-sticky;
+    /* Safari */
     top: 155px;
   }
 
