fixed bug (ninguno en buscador)

--- a/sass/partials/_reset.scss
+++ b/sass/partials/_reset.scss
@@ -56,3 +56,7 @@ button, input[type="submit"], input[type="reset"] {
 	cursor: pointer;
 	outline: inherit;
 }
+
+select {
+	-webkit-appearance: none;
+}
