--- a/style.2.css
+++ b/style.2.css
@@ -1310,6 +1310,56 @@ body {
   margin: 0.9375em 0;
 }
 
+.modal-container {
+  z-index: 1000;
+  background: rgba(0, 0, 0, 0.65);
+  position: fixed;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 0 15px;
+}
+
+.modal {
+  max-width: 550px;
+  max-height: 350px;
+  background: white;
+  border-radius: 7px;
+  z-index: 1001;
+  padding: 50px;
+  position: relative;
+}
+.modal__titulo {
+  font-weight: bold;
+  padding-bottom: 5px;
+  margin-bottom: 25px;
+  border-bottom: 1px solid #aaa;
+}
+.modal__link {
+  display: inline-block;
+  padding: 10px 15px;
+  margin-top: 25px;
+  text-decoration: none;
+  color: white;
+  font-weight: bold;
+  background: #62b9ff;
+}
+.modal__boton-cerrar {
+  position: absolute;
+  top: 0;
+  right: 0;
+  background: red;
+  padding: 15px;
+  text-decoration: none;
+  color: white;
+  font-weight: bold;
+  border-radius: 0 7px 0 0;
+}
+
 @media (max-width: 375px) {
   html {
     font-size: 0.8em;
